@@ -3,13 +3,14 @@ package com.iyte_yazilim.proje_pazari.application.queries.adminListUsers;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
+import com.iyte_yazilim.proje_pazari.application.common.ApiResponse;
 import com.iyte_yazilim.proje_pazari.application.dtos.PagedResponse;
 import com.iyte_yazilim.proje_pazari.application.dtos.UserAdminDTO;
 import com.iyte_yazilim.proje_pazari.domain.enums.RoleType;
-import com.iyte_yazilim.proje_pazari.domain.models.ApiResponse;
 import com.iyte_yazilim.proje_pazari.infrastructure.persistence.UserRepository;
 import com.iyte_yazilim.proje_pazari.infrastructure.persistence.models.UserEntity;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -49,11 +50,10 @@ class AdminListUsersHandlerTest {
     @Test
     @DisplayName("Should list users with pagination")
     void shouldListUsersWithPagination() {
-        Page<UserEntity> page = new PageImpl<>(List.of(testUser));
-        when(userRepository.findWithFilters(any(), any(), any(), any(Pageable.class)))
+        Object[] row = new Object[] {testUser, 2L, 3L};
+        Page<Object[]> page = new PageImpl<>(Collections.singletonList(row));
+        when(userRepository.findWithFiltersAndCounts(any(), any(), any(), any(Pageable.class)))
                 .thenReturn(page);
-        when(userRepository.countProjectsByUserId(any())).thenReturn(2);
-        when(userRepository.countApplicationsByUserId(any())).thenReturn(3);
 
         AdminListUsersQuery query = new AdminListUsersQuery(0, 50, null, null, null);
         ApiResponse<PagedResponse<UserAdminDTO>> response = handler.handle(query);
@@ -61,31 +61,34 @@ class AdminListUsersHandlerTest {
         assertNotNull(response);
         assertNotNull(response.getData());
         assertEquals(1, response.getData().getContent().size());
-        assertEquals("test@example.com", response.getData().getContent().get(0).email());
+        UserAdminDTO dto = response.getData().getContent().get(0);
+        assertEquals("test@example.com", dto.email());
+        assertEquals(2, dto.projectCount());
+        assertEquals(3, dto.applicationCount());
     }
 
     @Test
     @DisplayName("Should filter users by role")
     void shouldFilterByRole() {
-        Page<UserEntity> page = new PageImpl<>(List.of(testUser));
-        when(userRepository.findWithFilters(eq(RoleType.USER), any(), any(), any(Pageable.class)))
+        Object[] row = new Object[] {testUser, 0L, 0L};
+        Page<Object[]> page = new PageImpl<>(Collections.singletonList(row));
+        when(userRepository.findWithFiltersAndCounts(
+                        eq(RoleType.USER), any(), any(), any(Pageable.class)))
                 .thenReturn(page);
-        when(userRepository.countProjectsByUserId(any())).thenReturn(0);
-        when(userRepository.countApplicationsByUserId(any())).thenReturn(0);
 
         AdminListUsersQuery query = new AdminListUsersQuery(0, 50, RoleType.USER, null, null);
         ApiResponse<PagedResponse<UserAdminDTO>> response = handler.handle(query);
 
         assertNotNull(response.getData());
         verify(userRepository)
-                .findWithFilters(eq(RoleType.USER), any(), any(), any(Pageable.class));
+                .findWithFiltersAndCounts(eq(RoleType.USER), any(), any(), any(Pageable.class));
     }
 
     @Test
     @DisplayName("Should return empty page when no users")
     void shouldReturnEmptyPage() {
-        Page<UserEntity> emptyPage = new PageImpl<>(List.of());
-        when(userRepository.findWithFilters(any(), any(), any(), any(Pageable.class)))
+        Page<Object[]> emptyPage = new PageImpl<>(List.of());
+        when(userRepository.findWithFiltersAndCounts(any(), any(), any(), any(Pageable.class)))
                 .thenReturn(emptyPage);
 
         AdminListUsersQuery query = new AdminListUsersQuery(0, 50, null, null, null);
